# NLP-practica-5-groupo-9

./: .gitignore  README.md  attention.py  causal_llm.py  exploration.py  generate_report.py  main.py  pyproject.toml  save_weights.py  transformer.py
p5/: causal_llm.py  causal_train.py  cli.py  corpus.py  ner.py  tokenizer.py  transformer.py
pre_entrega/: anotacion_NER.md  corpus_etiquetado.tsv  generate_annotations.py  metadatos.json
